[CORE] Update css to fix spacing

--- a/app/themes/flat/assets/stylesheets/flat/flat.scss
+++ b/app/themes/flat/assets/stylesheets/flat/flat.scss
@@ -1149,6 +1149,7 @@ h4.qna {
   margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 30px;
+  cursor: pointer;
 }
 
 .main-option {
