--- a/app/themes/light/assets/stylesheets/light/light.scss
+++ b/app/themes/light/assets/stylesheets/light/light.scss
@@ -1144,4 +1144,5 @@ h4.qna {
   margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 30px;
+  cursor: pointer;
 }
