--- a/app/themes/nordic/assets/stylesheets/nordic/nordic.scss
+++ b/app/themes/nordic/assets/stylesheets/nordic/nordic.scss
@@ -1167,6 +1167,7 @@ h4.qna {
   margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 30px;
+  cursor: pointer;
 }
 
 .main-option {
