--- a/app/themes/singular/assets/stylesheets/singular/singular.scss
+++ b/app/themes/singular/assets/stylesheets/singular/singular.scss
@@ -100,6 +100,10 @@ i.circle-icon {
   color: $icon-color;
 }
 
+#posts {
+  margin-top: 60px;
+}
+
 @media(max-width:767px){
 	.jumbotron h1, h1 {
 		font-size: 200%;
@@ -1161,4 +1165,6 @@ h4.qna {
   margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 30px;
+  padding: 0;
+  cursor: pointer;
 }
